[backend][refactor]: remove SystemFlagService DB logic, fully migrate schema refresh status to Redis lock
- Replace all usages of SystemFlagService with RedisLockService for schema refresh status checks
- Remove DB-based leader election and flag management from SystemFlagService (now deprecated)
- Update TableService, TaskService, TaskQueueManagerV2Impl, and SystemFlagController to use RedisLockService
- Refactor SchemaRefreshScheduler to eliminate DB flag logic and rely solely on Redis lock with improved renewal handling
- Add isRefreshInProgress() to RedisLockService for unified status checks
- Minor doc and param improvements; centralize Hive decimal constants in Constants.java